# kaiyuanqimin

./: .gitignore  1D_PERF.md  FEEDBACK.md  LONG.md  LONG_PERF_2.md  MODEL_IMP.md  README.md  app.py  fetch_weather.sh  pyproject.toml  train_all.sh
.github/: copilot-instructions.md
.streamlit/: config.toml
configs/: 吉林-粳米.toml  四川-生姜.toml  四川-白条猪.toml  四川-苦瓜.toml  四川-莴笋.toml  山东-圆白菜.toml  山东-土豆.toml  山东-大葱.toml  山东-尖椒.toml  山东-生姜.toml  山东-白条鸡.toml  山东-花生油.toml  山东-西红柿.toml  山东-面粉（小麦）.toml  山东-鲜鸡蛋.toml  山东-黄瓜.toml  江苏-粳米.toml  江苏-芹菜.toml  江苏-莲藕.toml  江苏-菠菜.toml  江西-籼米.toml  江西-菜籽油.toml  河北-圆白菜.toml  河北-土豆.toml  河北-大白菜.toml  河北-花生油.toml  河北-面粉（小麦）.toml  河北-鲜鸡蛋.toml  河北-黄瓜.toml  河南-大白菜.toml  河南-白条猪.toml  河南-胡萝卜.toml  河南-花生油.toml  河南-西红柿.toml  河南-面粉（小麦）.toml  河南-黄瓜.toml  湖南-籼米.toml  湖南-菜籽油.toml  湖南-辣椒（尖椒-青椒）.toml  黑龙江-粳米.toml  (+1 more)
devdocs/: 11_LONG_PERF_3.md  1_INITIAL_PLAN.md  3_WEATHER.md  4_MORE_MODELS.md  9_LONG_PERF.md  generate_tech_report_figures.py  tech_report.typ
kyqm/: __init__.py  cli.py  config.py  config.toml  dataset.py  feature_engineering.py  metrics.py  model.py  model_gru.py  model_lgb.py  model_lstm.py  model_prophet.py  model_ridge.py  prepare.py  train.py
qixiang/: __init__.py  cli.py  config.py  config.toml  fetch.py  transform.py
qixiang/configs/: 吉林.toml  四川.toml  山东.toml  江苏.toml  江西.toml  河北.toml  河南.toml  湖南.toml  黑龙江.toml
swyb/: __init__.py  cli.py  config.py  config.toml  fetch.py  transform.py
