[project]
name = "kaiyuanqimin"
version = "0.1.0"
description = "Multi-source agricultural price forecasting pipeline"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "numpy>=2.4.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
