[project]
name = "kaiyuanqimin"
version = "0.1.0"
description = "Multi-source agricultural price forecasting pipeline"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "cpca>=0.5.5",
    "lightgbm>=4.6.0",
    "numpy>=2.4.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
